Continued planning and started experimentally implementing Marmox page templating framework.